# knowledge-base-mcp

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  INSTALLATION.md  README.md  ingest.py  ingest_blocks.py  ingest_core.py  ingest_worker.py  lexical_index.py  modal_services.py  models.py  pyproject.toml  requirements.txt  server.py
docs/: RLM_INTEGRATION_PLAN.md
scripts/: backfill_fts_from_qdrant_v2.py  cleanup_graph_bloat.py  cleanup_graph_bloat_v2.py  dedup_dir1_vs_dir2.py  dedup_nanded.py  inspect_graph_schema.py
